# syact

./: .gitignore  Cargo.toml  LICENCE  LICENSE  README.md  article.tex  changelog.md  syproj.json  test_s.sh  testing.cmd  testing.sh
.github/workflows/: rust.yml
article/: article.aux  article.fdb_latexmk  article.fls  article.tex
docs/: calculation.md  components.md  dc_motors.md  examples.md  getting_started.md  platforms.md  servos.md  tools.md  unit_system.md
docs/article/: article.aux  article.tex
docs/drawio/: .$forces.drawio.bkp  .$structure.drawio.bkp  forces.drawio  structure.drawio
docs/tests/: comp.rs  servo.rs  stepper.rs  tools.rs
docs/tests/curves/: complex_curve.rs  complex_path.rs  curve_to_speed.rs  simple_curve.rs  simple_path.rs  torque_curve.rs
docs/tests/speed/: mod.rs
documentation/: actuators.md
documentation/diagrams/: act_actuator_traits.drawio
documentation/sync/stepper/: builder.md
examples/: custom_component.rs  cylinder.rs  dc_motors.rs  stepper_motor.rs  testing.rs  tongs.rs
examples/async/: plot_pos.rs
examples/curves/: complex_path.rs  curve_to_speed.rs  simple_curve.rs  simple_path.rs  torque_curve.rs
examples/driving/: fixed_speed.rs
examples/hardware/comps/: stepper.rs
examples/hardware/devices/: led.rs
examples/hardware/meas/: endswitch.rs  endswitch_cons.rs  simple_meas_endswitch.rs  virtual_endswitch.rs
examples/hardware/stepper/: fixed_dist.rs  helper.rs  plot_pos.rs
examples/hardware/tools/: tongs.rs
examples/math/: builders.rs  movements.rs  path.rs  time.rs
examples/net/: ctrl_client.rs  ctrl_server.rs  ctrl_stepper_client.rs  ctrl_stepper_server.rs
examples/simple_conv/: Cargo.toml
examples/simple_conv/src/: main.rs
scripts/: testing.cmd
sketches/: list.xlsx
src/: act.rs  asyn.rs  comp.rs  comps.rs  conf.rs  controller.rs  ctrl.rs  data.rs  device.rs  err.rs  gcode.rs  group.rs  lib.rs  main.rs  math.rs  meas.rs  parent.rs  paths.rs  prelude.rs  sync.rs  tool.rs  units.rs
src/act/: asyn.rs  comps.rs  conveyor.rs  cylinder_triangle.rs  gear.rs  group.rs  linear_axis.rs  parent.rs  stepper.rs
src/act/comps/: conveyor.rs  cylinder_triangle.rs  gear.rs  linear_axis.rs  state_comp.rs
src/act/stepper/: builder.rs  (+2 more)
src/comp/: asyn.rs  asynchr.rs  conveyor.rs  cylinder.rs  cylinder_triangle.rs  gear_bearing.rs  gear_joint.rs  group.rs  lk.rs  stepper.rs  tool.rs
src/comps/: conveyor.rs  gear.rs  linear_axis.rs
src/conf/: elem.rs  json.rs
src/ctrl/: asyn.rs  asynchr.rs  comp.rs  dc_motor.rs  des.rs  driver.rs  led.rs  paths.rs  pin.rs  pwm.rs  servo.rs  stepper.rs  switch.rs  types.rs
src/data/: comp.rs  lk.rs  servo.rs  stepper.rs  var.rs
src/device/: dc_motor.rs  des.rs  led.rs  pin.rs  pwm.rs  servo.rs  switch.rs
src/math/: actors.rs  builders.rs  curve.rs  force.rs  inertia.rs  kin.rs  load.rs  movements.rs  path.rs
src/meas/: endstop.rs  endswitch.rs  sonar.rs
src/sync/: servo.rs  stepper.rs
src/tests/: act.rs  comp.rs  data.rs  device.rs  math.rs  mod.rs  movements.rs  servo.rs  stepper.rs  sync.rs  tools.rs
src/tool/: axial_joint.rs  axis_tongs.rs  pencil_tool.rs  relay.rs  tongs.rs
stepper_macros/: Cargo.toml  README.md
stepper_macros/src/: lib.rs
syact_macros/: Cargo.toml  README.md
syact_macros/src/: lib.rs
syact_std/: Cargo.toml  README.md
syact_std/src/: lib.rs
test/: StepperTests.xlsx  basic_plot.py  inputs.py  raw_data.txt  times.txt
test/data/: values.txt
tests/: mod.rs
(+50 files in other folders)
