[package]
name = "syact"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.15.0"
description = "A library that defines actuators and their interaction with each other"
edition = "2024"
repository = "https://github.com/SamuelNoesslboeck/syact"
license-file = "LICENSE"
keywords = [ "framework", "robotics" ]

[lib]
name = "syact"
path = "src/lib.rs"

[dependencies]
atomic_float = "1.1.0"
embedded-hal = "1.0.0"
serde = { version = "1.0.228", features = [ "derive" ], optional = true }

sykin = "0.1.0"
syunit = "0.4.0"

[features]
default = [ "serde" ]
serde = [ "dep:serde" ]
testing = [ ]

[[test]]
name = "main_tests"
path = "tests/mod.rs"