[package]
name = "stepper_macros"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
repository = "https://github.com/SamuelNoesslboeck/stepper_lib"
version = "0.1.0"
edition = "2021"
description = "Macros for the stepper_lib"
license = "MIT"
keywords = [ "no_std", "framework", "robotics", "macros" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = "2.0.18"